--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@xterm/xterm": "^5.5.0",
         "laravel-echo": "^1.17.1",
         "pusher-js": "^8.4.0-rc2",
-        "socket.io-client": "^4.8.1"
+        "socket.io-client": "^4.8.1",
+        "xterm": "^5.3.0",
+        "xterm-addon-fit": "^0.8.0"
     }
 }
